test/invalid/41625_ArgumentsToMethodCall/A.plume

class A extends Object is
